<resources>
  <string name="app_name">Reps Diary</string>
  <string name="reps_diary">Reps Diary</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="register">Register</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="back">Back</string>
  <string name="logout">Logout</string>
  <string name="all_fields_necessary">All fields are necessary!</string>
  <string name="password_not_same">Seems like the confirmed password is not the same…</string>
  <string name="name">Name</string>
  <string name="error_bad_email_format">The email address is badly formatted.</string>
  <string name="error_invalid_password">The password is invalid or the user does not have a password.</string>
  <string name="error_small_password">The given password is invalid. [ Password should be at least 6 characters ]</string>
  <string name="error_email_already_taken">The email address is already in use by another account.</string>
  <string name="error_invalid_user">There is no user record corresponding to this identifier. The user may have been deleted.</string>
</resources>
