<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".Activity.Register">

  <TextView
    android:id="@+id/register_text_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:textColor="@color/white"
    android:textSize="50sp"
    app:layout_constraintBottom_toTopOf="@id/register_guidelineVertical"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/register_guidelineVertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.3" />

  <EditText
    android:id="@+id/register_edittext_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints="name"
    android:hint="@string/name"
    android:inputType="textPersonName"
    android:minWidth="250dp"
    android:minHeight="60dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    app:layout_constraintBottom_toTopOf="@id/register_edittext_email"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/register_guidelineVertical" />

  <EditText
    android:id="@+id/register_edittext_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints="emailAddress"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:minWidth="250dp"
    android:minHeight="60dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    app:layout_constraintBottom_toTopOf="@id/register_edittext_password"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/register_edittext_name" />

  <EditText
    android:id="@+id/register_edittext_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints="password"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:minWidth="250dp"
    android:minHeight="60dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    app:layout_constraintBottom_toTopOf="@id/register_edittext_confirmPassword"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/register_edittext_email" />

  <CheckBox
    android:id="@+id/register_checkbox_passwordVisibility"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="48dp"
    android:minHeight="48dp"
    app:layout_constraintBottom_toTopOf="@id/register_edittext_confirmPassword"
    app:layout_constraintLeft_toRightOf="@id/register_edittext_password"
    app:layout_constraintTop_toBottomOf="@id/register_edittext_email" />

  <EditText
    android:id="@+id/register_edittext_confirmPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints="password"
    android:hint="@string/confirm_password"
    android:inputType="textPassword"
    android:minWidth="250dp"
    android:minHeight="60dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    app:layout_constraintBottom_toTopOf="@id/register_button_register"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/register_edittext_password" />

  <CheckBox
    android:id="@+id/register_checkbox_confirmPasswordVisibility"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="48dp"
    android:minHeight="48dp"
    app:layout_constraintBottom_toTopOf="@id/register_button_register"
    app:layout_constraintLeft_toRightOf="@id/register_edittext_confirmPassword"
    app:layout_constraintTop_toBottomOf="@id/register_edittext_password" />

  <Button
    android:id="@+id/register_button_register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="150dp"
    android:minHeight="60dp"
    android:text="@string/register"
    app:layout_constraintBottom_toTopOf="@id/register_button_back"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/register_edittext_confirmPassword" />

  <ProgressBar
    android:id="@+id/register_progressBar_register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    app:layout_constraintBottom_toTopOf="@id/register_button_back"
    app:layout_constraintLeft_toRightOf="@id/register_button_register"
    app:layout_constraintTop_toBottomOf="@id/register_edittext_confirmPassword" />

  <Button
    android:id="@+id/register_button_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="150dp"
    android:minHeight="60dp"
    android:text="@string/back"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/register_button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>
